[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unitsauce"
version = "0.1.1"
description = "AI-powered test failure analysis and fix suggestions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zan Starasinic"}
]
dependencies = [
    "anthropic",
    "python-dotenv",
    "art",
    "rich",
    "pytest",
    "pytest-json-report",
]

[project.scripts]
unitsauce = "unitsauce.main:main"

[project.urls]
Homepage = "https://github.com/zanstarasinic/unitsauce"